[tool.poetry]
name = "xml-file-finder"
version = "0.1.0"
description = "utility for finding files based on xpath expressions"
authors = ["mynydd <paul.number12@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
